[project]
name = "ai-lab"
version = "0.1.0"
description = "A personal learning lab for agents, orchestration, MCP servers, and evals."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core LLM + orchestration
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    # Model providers (both registered; Anthropic prioritized)
    "langchain-anthropic>=0.2",
    "langchain-openai>=0.2",
    # Observability (LangSmith is the tracing spine)
    "langsmith>=0.1",
    # Config / settings
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Installed in later phases; kept here so the roadmap is visible.
mcp = ["mcp[cli]>=1.2"]
evals = ["deepeval>=1.0", "pytest>=8.0"]
dev = ["ruff>=0.5", "pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lab"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
